# comfyg-models

./: .gitignore  LICENSE  README.md  __init__.py  comfyg-models-research.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
py/: __init__.py  civitai.py  database.py  hasher.py  image_indexing.py  image_metadata.py  results_scanner.py  scanner.py  server.py  settings.py  thumbnail_cache.py  watcher.py  worker.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web-extension/: comfyg-models.js
web/src/: App.tsx  index.css  main.tsx
web/src/components/: TagInput.tsx
web/src/hooks/: queryKeys.ts  useDirectoryPicker.ts  useImages.ts  useModels.ts  useResultsScan.ts  useScan.ts  useSettings.ts
web/src/store/: ui.ts
web/src/types/: civitai.ts  model.ts
